--- a/css/new-age.css
+++ b/css/new-age.css
@@ -118,7 +118,7 @@ header.masthead {
   padding-top: 150px;
   padding-bottom: 100px;
   color: white;
-  background: url("images/bg.jpg")no-repeat center center fixed;
+  background: url("img/bg.jpg")no-repeat center center fixed;
 		-webkit-background-size: cover;
 		  -moz-background-size: cover;
   		-o-background-size: cover;
